# score-calculator

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/mahjong/: score_calculator.hpp
include/mahjong/score_calculator/: config.hpp  core.hpp  fu_han.hpp  hand.hpp  meld.hpp  parser.hpp  result.hpp  score.hpp  tile.hpp  types.hpp  utils.hpp  winning_hand.hpp  yaku.hpp
src/: config.hpp  core.hpp  fu_han.cpp  fu_han.hpp  hand.cpp  hand.hpp  meld.cpp  meld.hpp  parser.cpp  parser.hpp  result.hpp  score.cpp  score.hpp  tile.cpp  tile.hpp  types.hpp  utils.cpp  winning_hand.cpp  winning_hand.hpp  yaku.cpp  yaku.hpp
tests/: fu_han_test.cpp  parser_test.cpp  score_test.cpp  winning_hand_test.cpp
